--- a/src/UserTodos/UserTodos.css
+++ b/src/UserTodos/UserTodos.css
@@ -21,3 +21,28 @@
 .table tbody tr:hover {
     background-color: #e2e6ea; /* Light blue background on hover */
 }
+
+/* Edit button styles */
+.btn-edit {
+    background-color: #3cbd96d7; /* Teal color */
+    border-color: #31ab86c6; /* Teal color */
+    color: white; /* White text color */
+  }
+  
+  .btn-edit:hover {
+    background-color: #17a2b8; /* Darker teal on hover */
+    border-color: #117a8b; /* Even darker teal border on hover */
+  }
+  
+  /* Delete button styles */
+  .btn-delete {
+    background-color: #0e7e79; /* Orange color */
+    border-color: #10a591; /* Orange color */
+    color: white; /* White text color */
+  }
+  
+  .btn-delete:hover {
+    background-color: #0db188; /* Darker orange on hover */
+    border-color: #0fa16e; /* Even darker orange border on hover */
+  }
+  
